docs/versioned_docs/version-1.3.1/intro.md
---
sidebar_position: 1
title: What is KubeAtlas
slug: /
---

# What is KubeAtlas

KubeAtlas builds a directed dependency graph of every resource in a
Kubernetes cluster — Deployments, ConfigMaps, Services, Ingresses,
Gateways, HTTPRoutes, PVCs, RBAC, CRDs — and lets you query it. It
answers the questions a flat `kubectl get` view cannot:

- *"If I delete this Secret, what breaks?"*
- *"Which Deployments mount this ConfigMap?"*
- *"What's the routing path from this Ingress to a Pod?"*

![KubeAtlas topology canvas — full-bleed cartography view with the cluster strip on the left and the time axis above.](/img/topology-main.png)

## What it is not

- **A general-purpose Kubernetes UI.** Use [Headlamp](https://headlamp.dev/)
  or [Lens](https://k8slens.dev/) for that.
- **A monitoring tool.** Use Prometheus, Datadog, or your APM of choice.
- **A GitOps tool.** Use Argo CD or Flux.

KubeAtlas is the *dependency graph*: a focused view that complements
the tools above instead of replacing them.

## Project status

**v1.3.1** — federation cluster picker wired to the topology
canvas, keyboard graph traversal, drag-anchor time-axis rail,
radial menu for blast-radius depth, screen-reader announcements,
Slate theme WCAG AA contrast fix, and `kubectl atlas --version`.

**v1.3.0 — Phase 3 complete.** Multi-cluster federation (one
KubeAtlas instance attaches to N kubeconfigs and serves
`/api/v1/federation/*`), platform-identity edges
(`BINDS_PLATFORM_IDENTITY` for EKS IRSA / AKS Workload
Identity / GKE Workload Identity), HorizontalPodAutoscaler
support (new `SCALES` edge type), `kubeatlas-action` for GitHub
CI, and the cartography Web UI redesign (5 runtime-switchable
themes, ⌘K command palette, blast-radius mode, time-axis diff,
edge-type filter presets, multi-cluster left strip).

Carried forward from earlier phases: persistent state
(PostgreSQL + Apache AGE, opt-in), Rego rule packs, RBAC graph,
blast radius, orphan + cycle detection, `/api/v1/*` GA
alongside the frozen `/api/v1alpha1/*`, cert-manager TLS Helm
integration. Defaults stay the same as v0.1.0: in-memory unless
you opt in, single-replica, no built-in authentication — see
the [security warning](./installation/security-warning.md)
before exposing the UI. The [Quick Start](./quick-start.md)
walks through the install; the [Roadmap](./roadmap.md) covers
what's next.

## Reading order

1. [Quick Start](./quick-start.md) — get a graph out of a cluster
   (any cluster you control; kind works if you don't have one) in a
   few minutes.
2. [Architecture](./architecture.md) — design principles and how
   the pieces fit together.
3. [Concepts](./concepts/api-versioning) — the conceptual model
   (blast radius, orphans + cycles, Rego rules, API versioning).
4. [Developer Guide](./developer-guide.md) — for contributors:
   prerequisites, build, test, and a worked example of adding an edge
   type.
5. [Roadmap](./roadmap.md) — where KubeAtlas is going next.
